--- a/app/src/main/res/layout/activity_p_questionaire.xml
+++ b/app/src/main/res/layout/activity_p_questionaire.xml
@@ -20,8 +20,7 @@
         android:layout_marginBottom="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/questionnaire" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/quest_et_temp"
