--- a/app/src/main/res/layout/activity_p_sel_doc.xml
+++ b/app/src/main/res/layout/activity_p_sel_doc.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent"
     android:background="#F3F3F3">
 
+    <!--  해당 과 클릭시 전공의 출력하는 activity 필요      -->
     <LinearLayout
-        android:id="@+id/select_hospital_titlebar_linearlayout"
+        android:id="@+id/select_doctor_titlebar_linearlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="272dp"
         android:background="#FFFFFF"
         android:elevation="20dp"
         android:gravity="center"
@@ -24,34 +26,28 @@
             android:layout_marginTop="23dp"
             android:layout_marginBottom="15dp"
             android:baselineAligned="false"
-            android:text="Select Hospital"
+            android:text="Select Doctor"
             android:textColor="#0070C0"
             android:textSize="40sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/hospital_list_linearlayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginTop="30dp"-->
-<!--        android:gravity="center"-->
-<!--        android:orientation="vertical"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/select_hospital_titlebar_linearlayout"-->
-<!--        app:layout_constraintVertical_bias="0.0">-->
+    <Button
+        android:id="@+id/p_sel_doctor_again_btn_diag"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:layout_weight="1"
+        android:background="#0070C0"
+        android:text="예약 시간 설정"
+        android:textColor="#FFFFFF"
+        android:textSize="28sp"
 
-<!--        <ListView-->
-<!--            android:id="@+id/listView_hos"-->
-<!--            android:layout_gravity="center_horizontal"-->
-<!--            android:layout_width="330dp"-->
-<!--            android:layout_height="match_parent" />-->
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-<!--    </LinearLayout>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +69,7 @@
             tools:ignore="MissingConstraints">
 
             <TextView
-                android:id="@+id/p_sel_hos_name"
+                android:id="@+id/p_sel_doc_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="115dp"
@@ -83,7 +79,7 @@
                 android:textSize="18sp" />
 
             <ListView
-                android:id="@+id/listview_hospital"
+                android:id="@+id/listview_doctor"
                 android:layout_width="330dp"
                 android:layout_height="wrap_content">
 
@@ -95,8 +91,6 @@
 
 
     </LinearLayout>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
