--- a/app/src/main/res/layout/activity_d_appoint.xml
+++ b/app/src/main/res/layout/activity_d_appoint.xml
@@ -87,77 +87,90 @@
         android:id="@+id/time_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="240dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/ten_oclock"
+        <Button
+            android:id="@+id/d_appoint_btn_selectdate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="날짜 선택"
+            android:layout_margin="10dp"
+            android:layout_gravity="left"/>
+        <ListView
+            android:id="@+id/d_appoint_list_reservations"
             android:layout_width="330dp"
-            android:layout_height="68dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/border"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="10:00"
-            android:tag="10:00"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/eleven_oclock"
-            android:layout_width="330dp"
-            android:layout_height="68dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/border"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="11:00"
-            android:tag="11:00"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/fifthteen_oclock"
-            android:layout_width="330dp"
-            android:layout_height="68dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/border"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:tag="15:00"
-            android:text="15:00"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sixteen_oclock"
-            android:layout_width="330dp"
-            android:layout_height="68dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/border"
-            android:clickable="true"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:tag="16:00"
-            android:text="16:00"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
     </LinearLayout>
+
+
+<!--        <TextView-->
+<!--            android:id="@+id/ten_oclock"-->
+<!--            android:layout_width="330dp"-->
+<!--            android:layout_height="68dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            android:foreground="?android:attr/selectableItemBackground"-->
+<!--            android:gravity="center"-->
+<!--            android:text="10:00"-->
+<!--            android:tag="10:00"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/eleven_oclock"-->
+<!--            android:layout_width="330dp"-->
+<!--            android:layout_height="68dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            android:foreground="?android:attr/selectableItemBackground"-->
+<!--            android:gravity="center"-->
+<!--            android:text="11:00"-->
+<!--            android:tag="11:00"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/fifthteen_oclock"-->
+<!--            android:layout_width="330dp"-->
+<!--            android:layout_height="68dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            android:foreground="?android:attr/selectableItemBackground"-->
+<!--            android:gravity="center"-->
+<!--            android:tag="15:00"-->
+<!--            android:text="15:00"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/sixteen_oclock"-->
+<!--            android:layout_width="330dp"-->
+<!--            android:layout_height="68dp"-->
+<!--            android:layout_marginBottom="10dp"-->
+<!--            android:background="@drawable/border"-->
+<!--            android:clickable="true"-->
+<!--            android:focusable="true"-->
+<!--            android:foreground="?android:attr/selectableItemBackground"-->
+<!--            android:gravity="center"-->
+<!--            android:tag="16:00"-->
+<!--            android:text="16:00"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold" />-->
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
