--- a/app/src/main/res/layout/res_check_item.xml
+++ b/app/src/main/res/layout/res_check_item.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent  "
+        android:layout_height="68dp"
+        android:background="@drawable/border"
+        android:gravity="center_vertical"
+        android:foreground="?android:attr/selectableItemBackground"
+        >
+
+        <TextView
+            android:id="@+id/office_p_diag_type"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="비대면"
+            android:textColor="#0070C0"
+            android:textSize="20sp" />
+
+
+        <TextView
+            android:id="@+id/office_p_untact_patient"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:text="Kim Chulsu"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/office_p_untact_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="14:00"
+            android:textSize="20dp"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:id="@+id/btn_on"
+            android:layout_marginEnd="10dp"
+            android:text="비활성"
+            android:textSize="12dp"
+            />
+
+    </LinearLayout>
+</LinearLayout>
