--- a/app/src/main/res/layout/conf_item.xml
+++ b/app/src/main/res/layout/conf_item.xml
@@ -5,17 +5,26 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="360dp"
         android:layout_height="68dp"
         android:background="@drawable/border"
         android:gravity="center_vertical"
         android:foreground="?android:attr/selectableItemBackground"
         >
 
+        <TextView
+            android:id="@+id/office_p_diag_type"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:text="비대면"
+            android:textColor="#0070C0"
+            android:textSize="20sp" />
+
 
         <TextView
-            android:id="@+id/office_p_doctor"
-            android:layout_width="70dp"
+            android:id="@+id/office_p_date"
+            android:layout_width="140dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
@@ -25,32 +34,12 @@
             android:textStyle="bold"></TextView>
 
         <TextView
-            android:id="@+id/office_p_untact_date"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="20dp"
-            android:text="날짜"
-            android:textColor="#000000"
-            android:textSize="15dp"
-            android:textStyle="bold"></TextView>
-
-        <TextView
-            android:id="@+id/office_p_untact_time"
+            android:id="@+id/office_p_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
             android:text="14:00"
             android:textSize="20dp"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:id="@+id/btn_on"
-            android:layout_marginEnd="10dp"
-            android:text="비활성"
-            android:textSize="12dp"
-            />
 
     </LinearLayout>
 </LinearLayout>
