--- a/app/src/main/res/layout/questionnaire_item.xml
+++ b/app/src/main/res/layout/questionnaire_item.xml
@@ -1,40 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cli"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:layout_centerHorizontal="true"
-    android:layout_centerVertical="true"
-    android:clickable="false"
-    android:descendantFocusability="blocksDescendants"
-    >
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/quest_items"
-        android:layout_width="330dp"
+        android:layout_width="match_parent"
         android:layout_height="68dp"
-        android:layout_gravity="center"
         android:background="@drawable/border"
-        android:clickable="false"
-        android:focusable="true"
+        android:gravity="center_vertical"
         android:foreground="?android:attr/selectableItemBackground"
-        android:orientation="horizontal">
-
+        >
 
 
         <TextView
-            android:id="@+id/questionnaire"
-            android:layout_width="330dp"
-            android:layout_height="68dp"
-            android:background="@drawable/border"
-            android:clickable="false"
-            android:focusable="true"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:gravity="center"
-            android:text="문진표"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:id="@+id/quest_p_doctor"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:text="Kim Chulsu"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/quest_p_date"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="20dp"
+            android:text="날짜"
+            android:textColor="#000000"
+            android:textSize="15dp"
+            android:textStyle="bold"></TextView>
+
+        <TextView
+            android:id="@+id/quest_p_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="14:00"
+            android:textSize="20dp"/>
+
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:background="@drawable/border"
+        android:gravity="center_vertical"
+        android:foreground="?android:attr/selectableItemBackground"
+        >
+        <TextView
+            android:id="@+id/is_complete"
+            android:text="can't"
+            android:textSize="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="34dp"
+            android:background="@drawable/border"
+            android:gravity="center_vertical"
+            android:foreground="?android:attr/selectableItemBackground"/>
+    </LinearLayout>
+
 </LinearLayout>
