--- a/app/src/main/res/layout/activity_d_office.xml
+++ b/app/src/main/res/layout/activity_d_office.xml
@@ -65,17 +65,18 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="643dp"
+        android:layout_marginTop="48dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
-        tools:layout_editor_absoluteX="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">
 
         <ListView
             android:id="@+id/listview_office_patient"
             android:layout_width="330dp"
-            android:layout_height="wrap_content"
-            ></ListView>
+            android:layout_height="wrap_content"/>
 
 
     </LinearLayout>
