--- a/app/src/main/res/layout/activity_d_quest.xml
+++ b/app/src/main/res/layout/activity_d_quest.xml
@@ -37,6 +37,7 @@
 
     </LinearLayout>
 
+
     <LinearLayout
         android:id="@+id/d_quest_btn_layout"
         android:layout_width="match_parent"
@@ -49,14 +50,14 @@
         <Button
             android:id="@+id/d_quest_btn_write"
             android:layout_width="wrap_content"
-            android:layout_height="67dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#0070C0"
+            android:clickable="false"
             android:text="문진표 쓰기"
             android:textColor="#FFFFFF"
             android:textSize="28sp"
-            android:textStyle="bold"
-            android:clickable="false"/>
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/d_quest_btn_conf"
