jsm maybe  done push?

--- a/app/src/main/res/layout/activity_p_write_quest.xml
+++ b/app/src/main/res/layout/activity_p_write_quest.xml
@@ -70,6 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="작성내역"
+                    android:textColor="#000000"
                     android:textSize="15dp" />
             </LinearLayout>
 
@@ -100,6 +101,7 @@
                     android:id="@+id/et_quest_item2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="#000000"
                     android:hint="작성내역"
                     android:textSize="15dp" />
             </LinearLayout>
@@ -132,6 +134,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="작성내역"
+                    android:textColor="#000000"
                     android:textSize="15dp" />
             </LinearLayout>
 
@@ -163,6 +166,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="작성내역"
+                    android:textColor="#000000"
                     android:textSize="15dp" />
             </LinearLayout>
             <Button
