poffice와 doctor office 에 webrtc 부분이 추가 되었습니다 poffice의  reservnum 에 예약번호 넣어주사면 됩니다

--- a/app/src/main/res/layout/activity_d_quest_write.xml
+++ b/app/src/main/res/layout/activity_d_quest_write.xml
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="작성내역"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
         </LinearLayout>
 
@@ -90,6 +91,7 @@
                 android:id="@+id/d_et_quest_item2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:hint="작성내역"
                 android:textSize="15dp" />
         </LinearLayout>
@@ -122,6 +124,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="작성내역"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
         </LinearLayout>
 
@@ -153,6 +156,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="작성내역"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
         </LinearLayout>
         <Button
