--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
         android:background="#F2F2F2"
         android:ems="10"
         android:hint="  Password"
+        android:textColor="@color/black"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constrainedHeight="false"
@@ -74,6 +75,7 @@
         android:layout_marginTop="230dp"
         android:background="#F2F2F2"
         android:ems="10"
+        android:textColor="@color/black"
         android:hint="  Email"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
