--- a/app/src/main/res/layout/activity_d_quest.xml
+++ b/app/src/main/res/layout/activity_d_quest.xml
@@ -89,6 +89,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="작성할 문진표 목록"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"/>
@@ -111,6 +112,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="확인할 문진표 목록"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="10dp"/>
