--- a/app/src/main/res/layout/activity_d_quest_conf.xml
+++ b/app/src/main/res/layout/activity_d_quest_conf.xml
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="질문1"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -68,6 +68,7 @@
                 android:id="@+id/d_conf_answer_item1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="20dp" />
         </LinearLayout>
 
@@ -90,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="질문2"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -98,6 +99,7 @@
                 android:id="@+id/d_conf_answer_item2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="20dp" />
         </LinearLayout>
 
@@ -120,7 +122,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="질문3"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -128,6 +130,7 @@
                 android:id="@+id/d_conf_answer_item3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="20dp" />
         </LinearLayout>
 
@@ -150,7 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="질문4"
-                android:textColor="#000000"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
@@ -158,6 +161,7 @@
                 android:id="@+id/d_conf_answer_item4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="20dp" />
         </LinearLayout>
 
