--- a/app/src/main/res/layout/activity_p_res_check.xml
+++ b/app/src/main/res/layout/activity_p_res_check.xml
@@ -101,7 +101,7 @@
 
             android:id="@+id/listview_myrequest"
             android:layout_gravity="center_horizontal"
-            android:layout_width="240dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
         </ListView>
