--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
         android:background="#F2F2F2"
         android:ems="10"
         android:hint="  Password"
+        android:textColorHint="#848484"
         android:textColor="@color/black"
         android:inputType="textPassword"
         android:textSize="24sp"
@@ -77,6 +78,7 @@
         android:ems="10"
         android:textColor="@color/black"
         android:hint="  Email"
+        android:textColorHint="#848484"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/login_et_password"
@@ -91,6 +93,7 @@
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="57dp"
         android:text="Don't have an account?"
+        android:textColor="#848484"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/login_btn_signup"
         tools:ignore="MissingConstraints" />
