--- a/app/src/main/res/layout/activity_signup_patient.xml
+++ b/app/src/main/res/layout/activity_signup_patient.xml
@@ -119,7 +119,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/sign_up_button"
+            android:src="@drawable/sign_up_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
