--- a/app/src/main/res/layout/activity_type.xml
+++ b/app/src/main/res/layout/activity_type.xml
@@ -35,7 +35,7 @@
             android:layout_marginTop="87dp"
             android:background="#FFFFFF"
             android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/patient_button"
+            android:src="@drawable/patient_btn"
             />
 
         <ImageButton
@@ -46,17 +46,8 @@
             android:layout_marginTop="20dp"
             android:background="#FFFFFF"
             android:backgroundTint="#00FDFDFD"
-            android:src="@drawable/doctor_button" />
+            android:src="@drawable/doctor_btn" />
 
-        <ImageButton
-            android:id="@+id/type_btn_ph"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="#FFFFFF"
-            android:backgroundTint="#00FFFFFF"
-            android:src="@drawable/pharmacist_button" />
 
     </LinearLayout>
 
