--- a/app/src/main/res/layout/listview_quest_item.xml
+++ b/app/src/main/res/layout/listview_quest_item.xml
@@ -29,7 +29,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/listview_quest_item_name"
+                android:id="@+id/listview_quest_name"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
@@ -46,20 +46,22 @@
                 android:gravity="center">
 
                 <TextView
-                    android:id="@+id/listview_quest_item_date"
+                    android:id="@+id/listview_quest_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10/20"
-                    android:textSize="20dp"/>
+                    android:textSize="20dp"
+                    android:textColor="@color/black"/>
 
 
                 <TextView
-                    android:id="@+id/listview_quest_item_time"
+                    android:id="@+id/listview_quest_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:text="10:00"
-                    android:textSize="20dp"/>
+                    android:textSize="20dp"
+                    android:textColor="@color/black"/>
 
 
             </LinearLayout>
