--- a/app/src/main/res/layout/activity_p_res_check.xml
+++ b/app/src/main/res/layout/activity_p_res_check.xml
@@ -21,12 +21,12 @@
 
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="18dp"
             android:baselineAligned="false"
-            android:layout_gravity="center"
+            android:gravity="center"
             android:text="Request"
             android:textColor="#0070C0"
             android:textSize="40sp"
@@ -43,7 +43,7 @@
 
     <LinearLayout
 
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="643dp"
         android:layout_marginEnd="2dp"
         android:gravity="center_horizontal"
@@ -56,21 +56,19 @@
 
         <LinearLayout
             android:id="@+id/linearLayout_p_rcheck2"
-            android:layout_width="360dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:gravity="center"
+            android:layout_gravity="center_horizontal">
 
             <Button
                 android:id="@+id/p_req_first"
-                android:layout_width="wrap_content"
+                android:layout_width="360dp"
                 android:layout_height="50dp"
-                android:layout_weight="1"
                 android:background="#0070C0"
                 android:text="예약 목록"
+                android:gravity="center"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp"
                 android:textStyle="bold" />
